docs/versioned_docs/version-1.1.0/smart-contracts/PSP1155/psp1155.md
---
sidebar_position: 1
title: PSP1155
---

This example shows how you can reuse the implementation of [PSP1155](https://github.com/Supercolony-net/openbrush-contracts/tree/main/contracts/token/psp1155) token. Also, this example shows how you can customize the logic, for example, to track the number of token types with `unique_ids`, adding a new token type with the `add_type` function.

## Step 1: Include dependencies

Include dependencies on `psp1155` and `brush` in the cargo file.

```toml
[dependencies]
ink_primitives = { tag = "v3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { tag = "v3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { tag = "v3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { tag = "v3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { tag = "v3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }
ink_prelude = { tag = "v3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
scale-info = { version = "1", default-features = false, features = ["derive"], optional = true }

# These dependencies
psp1155 = { tag = "v1.0.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false }
brush = { tag = "v1.0.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false }

[features]
default = ["std"]
std = [
   "ink_primitives/std",
   "ink_metadata",
   "ink_metadata/std",
   "ink_env/std",
   "ink_storage/std",
   "ink_lang/std",
   "scale/std",
   "scale-info",
   "scale-info/std",

   # These dependencies   
   "psp1155/std",
   "brush/std",
]
```

## Step 2: Add imports

Replace `ink::contract` macro by `brush::contract`.
Import **everything** from `psp1155::traits`.

```rust
#[brush::contract]
pub mod my_psp1155 {
   use psp1155::traits::*;
```

## Step 3: Define storage

Declare storage struct and declare the field related to the `PSP1155Storage` trait. Then you need to derive the `PSP1155Storage` trait and mark the corresponding field with the `#[PSP1155StorageField]` attribute. Deriving this trait allows you to reuse the default implementation of `PSP1155`.

```rust
#[derive(Default, PSP1155Storage)]
#[ink(storage)]
pub struct MyPSP1155 {
    #[PSP1155StorageField]
    psp1155: PSP1155Data,
}
```

## Step 4: Inherit logic

Inherit implementations of the `PSP1155` trait. You can customize (override) methods in this `impl` block.

```rust
impl PSP1155 for MyPSP1155 {}
```

## Step 5: Define constructor

Define constructor. Your basic version of the `PSP1155` contract is ready!

```rust
impl MyPSP1155 {
    #[ink(constructor)]
    pub fn new() -> Self {
        Self::default()
    }
}
```

## Step 6: Customize your contract

Customize it by adding logic for denying of minting some tokens. 
We can deny minting of token with id by `deny` function.
Id will be added to `denied_ids` map.
If someone tries to mint token with denied id, we will reject transaction.

```rust
#[derive(Default, PSP1155Storage)]
#[ink(storage)]
pub struct MyPSP1155 {
    #[PSP1155StorageField]
    psp1155: PSP1155Data,
    denied_ids: StorageHashMap<Id, ()>,
}

impl PSP1155 for MyPSP1155 {}

impl MyPSP1155 {
    #[ink(constructor)]
    pub fn new() -> Self {
        Self::default()
    }

    #[ink(message)]
    pub fn deny(&mut self, id: Id) {
        self.denied_ids.insert(id, ());
    }

    #[ink(message)]
    pub fn mint_tokens(&mut self, id: Id, amount: Balance) -> Result<(), PSP1155Error> {
        if self.denied_ids.get(&id).is_some() {
            return Err(PSP1155Error::Custom(String::from("Id is denied")))
        }
        self._mint_to(Self::env().caller(), vec![(id, amount)])
    }
}
```

Also you can use extensions for PSP1155 token:

[PSP1155Metadata](Extensions/metadata): metadata for PSP1155.

[PSP1155Mintable](Extensions/mintable): creation of new tokens.

[PSP1155Burnable](Extensions/burnable): destruction of contract's tokens.
